2007-12-31  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGadgets.py: added Date to environment
	* src/gen/lib/date.py: added new Date constructor type: Date(y,m,d)

2007-12-30  Stéphane Charette <stephanecharette@gmail.com>
	* src/BaseDoc.py: new parms in GVDoc::add_node() and GVDoc::add_link()

2007-12-30  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/MenuOptions.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportDialog.py:
	* src/plugins/AncestorChart.py:
	Proof of concept: adding a center person option instead of 
	using active person

2007-12-30  Brian Matherly <brian@gramps-project.org>
	* src/Bookmarks: Set dialog to modal.

2007-12-30  Stéphane Charette <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/plugins/GVFamilyLines.py: more work-in-progress on GraphViz and
	getting FamilyLines to function in the new framework

2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Config/_GrampsConfigKeys.py: added MyGrampsView
	* src/Config/_GrampsGconfKeys.py: added try/excepts on get_types

2007-12-30  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVFamilyLines.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	Rename "PeoplePickerOption" to "PersonListOption".

2007-12-30  Stéphane Charette  <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py: write out the .dot file
	using ISO-8859 instead of UTF-8 (allows for things like accented chars)

2007-12-30  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/HtmlDoc.py: Fix undefined variables.

2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/OnThisDay.py: i18n changes
	* src/plugins/Makefile.am: added missing files
	* src/plugins/DefaultGadgets.py: i18n changes
	* src/QuickReports.py: allow callers to send obj directly
	* src/Simple/_SimpleTable.py: added support for objs
	* po/POTFILES.in: i18n changes
